[gd_scene load_steps=17 format=3 uid="uid://k1i5wlt0ju76"]

[ext_resource type="Script" path="res://scenes/menu_screen.gd" id="1_38ftq"]
[ext_resource type="PackedScene" uid="uid://drioxemoktbtr" path="res://scenes/player/player.tscn" id="3_1v1pj"]
[ext_resource type="Texture2D" uid="uid://ilmyuxi1v6m3" path="res://assets/sprites/logo.png" id="3_egxal"]
[ext_resource type="Texture2D" uid="uid://t1sj0gqipki8" path="res://assets/sprites/action_icons2.png" id="3_f27v6"]
[ext_resource type="Texture2D" uid="uid://dat1rvmtmbl26" path="res://assets/sprites/action_icons8.png" id="4_n7unn"]
[ext_resource type="Texture2D" uid="uid://bnkt07r1fjiyj" path="res://assets/sprites/action_icons4.png" id="5_g77bi"]
[ext_resource type="Texture2D" uid="uid://bxqdpphqpeqk" path="res://assets/sprites/computer.png" id="5_t0mf4"]
[ext_resource type="Texture2D" uid="uid://ch0jlbqe5gjh0" path="res://assets/sprites/action_icons7.png" id="6_o5dxp"]
[ext_resource type="Texture2D" uid="uid://dfgv02bmqcic7" path="res://assets/sprites/action_icons5.png" id="6_rtgfl"]
[ext_resource type="PackedScene" uid="uid://dfbk18kcp12t1" path="res://scenes/server_browser.tscn" id="6_tvt5c"]
[ext_resource type="AudioStream" uid="uid://c4hel8s01gyu0" path="res://assets/sounds/select2.ogg" id="8_p6wv7"]
[ext_resource type="AudioStream" uid="uid://damvexp438gwf" path="res://assets/sounds/select1.ogg" id="9_ktiug"]
[ext_resource type="Texture2D" uid="uid://d06pjycy5a67j" path="res://assets/sprites/discord-mark-blue.png" id="10_dvphd"]
[ext_resource type="PackedScene" uid="uid://cxfxw68ocj3lb" path="res://scenes/modlist/mod_list.tscn" id="10_qi416"]

[sub_resource type="LabelSettings" id="LabelSettings_q113w"]
outline_size = 5
outline_color = Color(0.00784314, 0.00784314, 0.00784314, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kxilj"]
font_size = 32
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="MenuScreen" type="Node2D"]
script = ExtResource("1_38ftq")

[node name="UI" type="CanvasLayer" parent="."]
layer = 5

[node name="ColorRect" type="ColorRect" parent="UI"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 433.0
grow_vertical = 2
color = Color(0, 0, 0, 0.576471)

[node name="VersionLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -38.0
offset_right = 427.0
offset_bottom = -12.0
grow_vertical = 0
text = "VERSION"
label_settings = SubResource("LabelSettings_q113w")

[node name="menu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="mbtns" type="VBoxContainer" parent="UI/menu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -220.0
offset_right = 357.0
offset_bottom = 214.0
grow_vertical = 2
alignment = 1

[node name="singleplayer" type="Button" parent="UI/menu/mbtns"]
layout_mode = 2
text = "Singleplayer"
icon = ExtResource("4_n7unn")
flat = true

[node name="hostgame" type="Button" parent="UI/menu/mbtns"]
layout_mode = 2
text = "Host Game"
icon = ExtResource("3_f27v6")
flat = true

[node name="joingame" type="Button" parent="UI/menu/mbtns"]
layout_mode = 2
focus_neighbor_right = NodePath("../../../ServerBrowser")
text = "Join Game"
icon = ExtResource("6_o5dxp")
flat = true

[node name="mods" type="Button" parent="UI/menu/mbtns"]
layout_mode = 2
text = "Mods"
icon = ExtResource("6_rtgfl")
flat = true

[node name="quitbtn" type="Button" parent="UI/menu/mbtns"]
layout_mode = 2
text = "Quit to Desktop"
icon = ExtResource("5_t0mf4")
flat = true

[node name="Logo" type="TextureRect" parent="UI/menu"]
texture_filter = 1
layout_mode = 0
offset_left = 69.0
offset_top = -297.0
offset_right = 350.0
offset_bottom = -147.0
texture = ExtResource("3_egxal")

[node name="mobilebtns" type="HBoxContainer" parent="UI/menu"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 2.625
anchor_right = 28.8
anchor_bottom = 5.65
alignment = 1

[node name="spbtn" type="Button" parent="UI/menu/mobilebtns"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Local Game"
icon = ExtResource("4_n7unn")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="hostgame" type="Button" parent="UI/menu/mobilebtns"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Host Game"
icon = ExtResource("5_t0mf4")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="joingame" type="Button" parent="UI/menu/mobilebtns"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Join Game"
icon = ExtResource("6_o5dxp")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="ToolsMenu" type="PopupMenu" parent="UI"]
title = "Developer Tools"
initial_position = 2
size = Vector2i(182, 144)
item_count = 2
item_0/text = "Skin Viewer"
item_0/icon = ExtResource("5_g77bi")
item_0/id = 0
item_1/text = "Map Editor"
item_1/icon = ExtResource("6_rtgfl")
item_1/id = 1

[node name="StartLogo" type="TextureRect" parent="UI"]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -199.0
offset_top = 79.0
offset_right = 202.0
offset_bottom = 293.0
grow_horizontal = 2
texture = ExtResource("3_egxal")

[node name="StartLabel" type="Label" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -181.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 0
text = "Press any key"
label_settings = SubResource("LabelSettings_kxilj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ServerBrowser" parent="UI" instance=ExtResource("6_tvt5c")]
visible = false
custom_minimum_size = Vector2(500, 500)
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -668.0
offset_top = -250.0
offset_right = -34.0
offset_bottom = 250.0
grow_horizontal = 0

[node name="descardbutton" type="TextureButton" parent="UI"]
editor_description = "Discord Button was going to be hidden due to some potential issues. (Privacy)"
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -75.0
offset_right = 51.0
offset_bottom = -37.0
grow_vertical = 0
tooltip_text = "Discord (Regret)"
texture_normal = ExtResource("10_dvphd")
ignore_texture_size = true
stretch_mode = 5

[node name="ModList" parent="UI" instance=ExtResource("10_qi416")]
visible = false
anchors_preset = 11
anchor_left = 1.0
offset_left = -693.0
offset_top = 23.0
offset_right = -14.0
offset_bottom = -30.0
grow_horizontal = 0

[node name="screen1" type="CanvasLayer" parent="."]
layer = 2

[node name="Control" type="Control" parent="screen1"]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -531.0
grow_horizontal = 0
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="other_player" parent="screen1/Control" instance=ExtResource("3_1v1pj")]
visible = false
position = Vector2(383, 302)
scale = Vector2(2.8, 2.8)
collision_layer = 0
collision_mask = 0
is_local_player = false
player_name = ""
can_animate = false
can_have_authority = false

[node name="menu_player" parent="screen1/Control" instance=ExtResource("3_1v1pj")]
top_level = true
position = Vector2(917, 358)
scale = Vector2(2, 2)
collision_layer = 0
collision_mask = 0
is_local_player = false
player_name = ""
can_animate = false
can_have_authority = false

[node name="Camera2D" type="Camera2D" parent="screen1"]
visible = false
position = Vector2(0, -2)
enabled = false
zoom = Vector2(0.9, 0.9)

[node name="screen2" type="Node2D" parent="."]

[node name="camera" type="Camera2D" parent="screen2"]

[node name="select" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_p6wv7")

[node name="select2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ktiug")

[node name="bg" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="bg"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
